--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
 <title>Adventure Log Dashboard</title>
-<link rel="icon" type="image/svg+xml" href="favicon.svg"/>
-<link rel="icon" type="image/png" sizes="96x96" href="favicon-96x96.png"/>
-<link rel="shortcut icon" href="favicon.ico"/>
-<link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png"/>
+<link rel="icon" type="image/svg+xml" href="log-svgrepo-com.svg"/>
+<link rel="shortcut icon" type="image/svg+xml" href="log-svgrepo-com.svg"/>
+<link rel="apple-touch-icon" sizes="any" href="log-svgrepo-com.svg"/>
 <link rel="manifest" href="site.webmanifest"/>
 <style>
 :root{
