--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@ h1{margin:0;font-size:28px;line-height:1.05;font-weight:800;letter-spacing:-0.01
 .search input::placeholder{color:#94a3b8;opacity:1;weight:200}
 .search input:hover{border-color:#cbd5f5}
 .search input:focus-visible{border-color:#475569}
-.search svg{position:absolute;left:10px;top:50%;transform:translateY(-50%);width:18px;height:18px;opacity:.6}
-.search-clear{position:absolute;right:10px;top:50%;transform:translateY(-50%);display:inline-flex;align-items:center;justify-content:center;width:24px;height:24px;border:none;border-radius:50%;background:transparent;color:var(--muted);cursor:pointer;padding:0;transition:color var(--dur) var(--ease),background-color var(--dur) var(--ease)}
+.search svg{position:absolute;left:10px;top:0;bottom:0;margin-block:auto;width:18px;height:18px;opacity:.6}
+.search-clear{position:absolute;right:10px;top:0;bottom:0;margin-block:auto;display:inline-flex;align-items:center;justify-content:center;width:24px;height:24px;border:none;border-radius:50%;background:transparent;color:var(--muted);cursor:pointer;padding:0;transition:color var(--dur) var(--ease),background-color var(--dur) var(--ease)}
 .search-clear svg{display:block;width:16px;height:16px;pointer-events:none}
 .search-clear:hover,.search-clear:focus-visible{color:var(--primary);background:#eef4ff;outline:none}
 .toolbar .spacer{flex:1 1 auto}
