Use centered search clear icon

--- a/index.html
+++ b/index.html
@@ -727,8 +727,8 @@ body.avatar-overlay-open{overflow:hidden}
           <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"><path d="M21 21l-4.35-4.35M10.5 18a7.5 7.5 0 1 1 0-15 7.5 7.5 0 0 1 0 15Z" stroke="currentColor" stroke-width="2"/></svg>
           <input id="q" placeholder="Search adventures"/>
           <button id="qClear" class="search-clear" type="button" aria-label="Clear search" hidden>
-            <svg viewBox="0 0 24 24" aria-hidden="true" focusable="false">
-              <path fill="currentColor" d="M16.95 5.64a1 1 0 0 1 1.41 1.41L13.41 12l4.95 4.95a1 1 0 0 1-1.41 1.41L12 13.41l-4.95 4.95a1 1 0 0 1-1.41-1.41L10.59 12 5.64 7.05a1 1 0 0 1 1.41-1.41L12 10.59l4.95-4.95Z"/>
+            <svg viewBox="0 0 460.775 460.775" fill="currentColor" aria-hidden="true" focusable="false">
+              <use href="x-symbol-svgrepo-com.svg#xSymbol" />
             </svg>
           </button>
         </div>
