Restore icon-only multi-character search toggle

--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@ h1{margin:0;font-size:28px;line-height:1.05;font-weight:800;letter-spacing:-0.01
 .btn.primary{background:var(--primary);color:#fff;border-color:transparent}
 .btn.primary:hover,.btn.primary:focus-visible{background:#155ccb;border-color:#0b57d0;color:#fff;outline:none}
 .btn-icon{display:inline-flex;align-items:center;justify-content:center;margin-right:6px}
+.btn-text{display:inline-flex;align-items:center;line-height:1;white-space:nowrap}
 .btn-icon svg{width:14px;height:14px}
 .btn.danger{border:1px solid rgba(220,38,38,.2);background:rgba(254,226,226,1);color:var(--danger);}
 .btn.danger:hover,.btn.danger:focus-visible{background:#fecaca;border-color:rgba(220,38,38,.35);color:#b91c1c;outline:none}
@@ -143,6 +144,11 @@ h1{margin:0;font-size:28px;line-height:1.05;font-weight:800;letter-spacing:-0.01
 .icon-btn.primary{background:var(--primary);color:#fff;border-color:var(--primary)}
 .icon-btn.primary:hover,.icon-btn.primary:focus-visible{background:#155ccb;border-color:#0b57d0;outline:none}
 .icon-btn[disabled]{opacity:.5;cursor:not-allowed;box-shadow:none;background:#f1f5f9;color:#94a3b8}
+.search-scope-toggle{width:32px;height:32px;border-radius:12px}
+.search-scope-toggle-icon{display:block;width:18px;height:18px;background-color:currentColor;mask:url('multiple-users-silhouette-svgrepo-com.svg') center/contain no-repeat;-webkit-mask:url('multiple-users-silhouette-svgrepo-com.svg') center/contain no-repeat;transition:background-color var(--dur) var(--ease),transform var(--dur) var(--ease)}
+.search-scope-toggle:hover .search-scope-toggle-icon,.search-scope-toggle:focus-visible .search-scope-toggle-icon{transform:scale(1.08)}
+.search-scope-toggle[aria-pressed="true"]{color:var(--primary);background:#eef4ff;border-color:rgba(26,115,232,.45)}
+.search-scope-toggle[aria-pressed="true"] .search-scope-toggle-icon{background-color:currentColor}
 .save-indicator-wrap{margin-left:auto;align-self:flex-start;display:flex;align-items:center;justify-content:flex-end;min-width:28px;position:relative}
 .save-indicator{width:28px;height:28px;border-radius:50%;display:flex;align-items:center;justify-content:center;color:var(--muted);opacity:0;transform:scale(.9);transition:opacity var(--dur) var(--ease),transform var(--dur) var(--ease);pointer-events:none}
 .save-indicator.active{opacity:1;transform:scale(1)}
@@ -730,6 +736,9 @@ body.avatar-overlay-open{overflow:hidden}
             <img src="close.png" alt="" width="16" height="16" decoding="async" aria-hidden="true" />
           </button>
         </div>
+        <button id="searchScopeToggle" class="icon-btn search-scope-toggle" type="button" aria-pressed="false" aria-label="Show entries from the selected character only" title="Show entries from the selected character only">
+          <span class="search-scope-toggle-icon" aria-hidden="true"></span>
+        </button>
         <button id="activityToggle" class="btn small pill" type="button" aria-pressed="false">Hide activities</button>
         <button id="addCard" title="Add new entry" aria-label="Add new entry" type="button" aria-haspopup="true" aria-expanded="false">
           <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M12 5v14M5 12h14"/></svg>
@@ -2107,6 +2116,14 @@ try{
 }
 
 let searchAllCharacters=false;
+try{
+  const savedScope=localStorage.getItem(STORAGE_KEYS.searchAll);
+  if(savedScope==='1'||savedScope==='true'){
+    searchAllCharacters=true;
+  }
+}catch(err){
+  /* no-op */
+}
 
 const MULTI_SEARCH_MIN_QUERY_LENGTH=2;
 const MULTI_SEARCH_PROMPT_TEXT=`Start typing to search across all characters.`;
@@ -5530,6 +5547,11 @@ function updateUiForSelection(key){
   if(activityToggleBtn){
     activityToggleBtn.style.display=isDm?'none':'';
     activityToggleBtn.setAttribute('aria-hidden', isDm?'true':'false');
+  }
+  if(searchScopeToggleBtn){
+    const showMulti=!isDm;
+    searchScopeToggleBtn.style.display=showMulti?'':'';
+    searchScopeToggleBtn.setAttribute('aria-hidden', showMulti?'false':'true');
   }
   if(addCardBtn){
     const showButton=!isDm || hasDmLogData();
