Hide multi-search toggle on DM log

--- a/index.html
+++ b/index.html
@@ -5770,7 +5770,7 @@ function updateUiForSelection(key){
   }
   if(searchScopeToggleBtn){
     const showMulti=!isDm;
-    searchScopeToggleBtn.style.display=showMulti?'':'';
+    searchScopeToggleBtn.style.display=showMulti?'':'none';
     searchScopeToggleBtn.setAttribute('aria-hidden', showMulti?'false':'true');
   }
   if(addCardBtn){
