Remove card focus outline flash

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@ h1{margin:0;font-size:28px;line-height:1.05;font-weight:800;letter-spacing:-0.01
 .log-list .card.open .card-bd{border-radius:0;background:transparent;border-color:rgba(148,163,184,.2)}
 .log-list .card .bd-in{padding:14px 0 16px}
 .log-list .card .edit-form{padding:18px 0 24px}
-.card:focus-visible{outline:2px solid rgba(100,116,139,.45);outline-offset:4px}
+.card:focus-visible{outline:none}
 .card.focus-glow{animation:card-focus-glow 1300ms ease-out}
 @keyframes card-focus-glow{
   0%{box-shadow:none;background-color:var(--row-bg,#fff)}
