--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
 }
 *{box-sizing:border-box}
 html,body{margin:0;padding:0;height:100%;min-height:100%;font-family:Inter,ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial;color:var(--ink);background:var(--bg);scrollbar-gutter:stable}
-body{display:flex;flex-direction:column;min-height:100vh;overflow:hidden;background:var(--bg)}
+body{display:flex;flex-direction:column;min-height:100vh;overflow-x:hidden;overflow-y:auto;background:var(--bg)}
 .app-shell{flex:1 1 auto;display:flex;flex-direction:column;min-height:0;background:var(--bg)}
-.app-main{flex:1 1 auto;display:flex;flex-direction:column;min-height:0;padding:24px clamp(20px,4vw,48px)}
+.app-main{flex:1 1 auto;display:flex;flex-direction:column;min-height:0;padding:24px clamp(20px,4vw,48px);overflow-y:auto;overflow-x:hidden}
 .app-main>.container{flex:1 1 auto;display:flex;flex-direction:column;max-width:880px;width:100%;margin:0 auto;min-height:0}
 .sheet-card{position:relative;background:transparent;border:none;border-radius:0;box-shadow:none;display:flex;flex-direction:column;min-height:0;flex:1 1 auto;padding:0}
-.sheet-card-header{padding:0 0 24px;display:flex;flex-direction:column;gap:20px;background:transparent;flex:0 0 auto;margin-bottom:24px}
+.sheet-card-header{padding:0 0 24px;display:flex;flex-direction:column;gap:20px;background:transparent;flex:0 0 auto;margin-bottom:24px;overflow-y:auto;overflow-x:hidden;scrollbar-gutter:stable}
 .sheet-card-body{flex:1 1 auto;display:flex;flex-direction:column;gap:20px;padding:0;background:transparent;min-height:0}
 .log-window{flex:1 1 auto;display:flex;flex-direction:column;position:relative;border-radius:0;border:none;background:transparent;box-shadow:none;overflow:hidden;min-height:0}
 .log-window::before{content:none}
